admission/policy-operator-admission.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    control-plane: audit-controller
  namespace: openshift-gatekeeper-system
status:
  phase: Running
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    control-plane: controller-manager
  namespace: openshift-gatekeeper-system
status:
  phase: Running
